--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -42,6 +42,7 @@
       h3 {
         margin-bottom: var(--spacing-xs);
         font-size: 1.5rem;
+        color: var(--color-accent);
       }
 
       &:nth-child(1) {
