--- a/scss/core/_mixins.scss
+++ b/scss/core/_mixins.scss
@@ -27,19 +27,19 @@
 }
 
 @mixin respond($breakpoint) {
-  @if $breakpoint == mobile or $breakpoint == md {
-    @media (max-width: 768px) {
-      @content;
-    }
-  } @else if $breakpoint == sm {
+  @if $breakpoint == sm {
     @media (max-width: 480px) {
       @content;
     }
-  } @else if $breakpoint == lg {
-    @media (max-width: 1024px) {
+  } @else if $breakpoint == md {
+    @media (min-width: 481px) and (max-width: 768px) {
       @content;
     }
-  } @else if $breakpoint == desktop or $breakpoint == xl {
+  } @else if $breakpoint == lg {
+    @media (min-width: 769px) and (max-width: 1024px) {
+      @content;
+    }
+  } @else if $breakpoint == xl {
     @media (min-width: 1025px) {
       @content;
     }
