--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,13 +1,13 @@
 @use "core/index";
 @use "components/_header";
 @use "components/_footer";
-@use "components/_hero";
-@use "components/_services";
-@use "components/_about";
-@use "components/_cta";
+@use "sections/_hero";
+@use "sections/_services";
+@use "sections/_about";
+@use "sections/_cta";
 @use "components/_themes";
 @use "components/_theme-switcher";
-@use "components/_innovation.scss";
-@use "components/_portfolio.scss";
-@use "components/_testimonials.scss";
+@use "sections/_innovation.scss";
+@use "sections/_portfolio.scss";
+@use "sections/_testimonials.scss";
 @use "components/_animate.scss";
